force-app/main/default/objects/MyInfo__c/MyInfo__c.object-meta.xml
<CustomObject>
    <label>MyInfo</label>
    <nameField>
        <label>MyInfo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>