force-app/main/default/objects/MyInfo__c/fields/birth_date__c.field-meta.xml
<CustomField>
    <fullName>birth_date__c</fullName>
    <label>birth date</label>
    <type>Date</type>
</CustomField>