force-app/main/default/objects/MyInfo__c/fields/isWorking__c.field-meta.xml
<CustomField>
    <fullName>isWorking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWorking</label>
    <type>Checkbox</type>
</CustomField>