force-app/main/default/objects/MyInfo__c/fields/languages__c.field-meta.xml
<CustomField>
    <fullName>languages__c</fullName>
    <label>languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>spanish</fullName>
            </value>
            <value>
                <fullName>turkish</fullName>
            </value>
            <value>
                <fullName>english</fullName>
            </value>
            <value>
                <fullName>multipicklist</fullName>
            </value>
            <value>
                <fullName>french</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>