force-app/main/default/objects/MyInfo__c/fields/my_job__c.field-meta.xml
<CustomField>
    <fullName>my_job__c</fullName>
    <label>my job</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>tester</fullName>
            </value>
            <value>
                <fullName>admin</fullName>
            </value>
            <value>
                <fullName>developer</fullName>
            </value>
            <value>
                <fullName>data analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>