force-app/main/default/objects/MyInfo__c/fields/My_Name__c.field-meta.xml
<CustomField>
    <fullName>My_Name__c</fullName>
    <label>My_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>