force-app/main/default/objects/MyInfo__c/fields/my_Phone__c.field-meta.xml
<CustomField>
    <fullName>my_Phone__c</fullName>
    <label>my_Phone</label>
    <type>Phone</type>
</CustomField>