force-app/main/default/objects/MyInfo__c/fields/myEmail__c.field-meta.xml
<CustomField>
    <fullName>myEmail__c</fullName>
    <label>myEmail</label>
    <type>Email</type>
</CustomField>