force-app/main/default/objects/MyInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>My_Name__c</columns>
    <columns>my_Phone__c</columns>
    <columns>myEmail__c</columns>
    <columns>birth_date__c</columns>
    <columns>age__c</columns>
    <columns>isWorking__c</columns>
    <columns>my_job__c</columns>
    <columns>languages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>